[gd_scene load_steps=4 format=3 uid="uid://v6af3kt1j3h"]

[ext_resource type="Script" path="res://scripts/level_end_screen.gd" id="1_3p1en"]
[ext_resource type="Texture2D" uid="uid://cn11q1vesq2dr" path="res://assets/Sky_Background_No_Moon.png" id="1_grxrl"]
[ext_resource type="FontFile" uid="uid://dffaop5on2ipr" path="res://assets/04B_30__.TTF" id="3_qprkg"]

[node name="LevelEndScreen" type="Node2D"]
script = ExtResource("1_3p1en")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_grxrl")
centered = false

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_qprkg")
theme_override_font_sizes/font_size = 22
text = "Presents Delivered"

[node name="GameOver" type="Label" parent="."]
visible = false
offset_top = 111.0
offset_right = 321.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("3_qprkg")
theme_override_font_sizes/font_size = 22
text = "Game Over!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="."]
offset_top = 74.0
offset_right = 320.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("3_qprkg")
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 1

[node name="Score2" type="Label" parent="."]
visible = false
offset_top = 152.0
offset_right = 320.0
offset_bottom = 179.0
theme_override_fonts/font = ExtResource("3_qprkg")
theme_override_font_sizes/font_size = 17
text = "Press Space to contnue"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
